# dvo-extractor

./: CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  README.md  build_deploy.sh  config-devel.yaml  config.yaml  deployment-requirements.txt  pr_check.sh  pyproject.toml  requirements.txt  setup.cfg  shellcheck.sh  testing-requirements.txt
.github/workflows/: bots-automerge.yml  mypy.yml  pr_approval.yaml
deploy/: clowdapp.yaml  test.yaml
dvo_extractor/: __init__.py  command_line.py
test/: __init__.py  command_line_test.py
tools/: run_pycodestyle.py
