[metadata]
name = dvo-extractor
version = 0.1.0
author = Red Hat Inc.
long_description = file: README.md
license = Apache 2.0
long_description_content_type = text/markdown
url = https://github.com/RedHatInsights/dvo-extractor
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
packages = find:
install_requires =
    app-common-python>=0.2.6
    ccx-messaging>=3.8.5
    insights-core>=3.2.23
    insights-core-messaging>=1.2.11

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    dvo-extractor = dvo_extractor.command_line:insights_dvo_extractor

[pycodestyle]
max-line-length = 100

[pydocstyle]
ignore = D211, D212, D213, E402
